--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "element-plus": "^1.2.0-beta.3",
     "md5": "^2.3.0",
     "vue": "^3.2.8",
+    "vue-i18n": "^9.2.0-beta.21",
     "vue-router": "^4.0.11",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xss": "^1.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
